# Devisions_Auth_FastApi

./: .gitignore  Makefile  README.md  alembic.ini  main.py  pyproject.toml  pytest.ini  teach.py  Мой новый экспорт Vscode.code-profile
alembic/: env.py
alembic/versions/: 141ecc9db144_create_user_table.py  9124d34f9955_create_user_table.py  b7ff7b60254b_add_user_model2.py  bde6ced9ec47_add_user_model.py
apps/: config.py  database.py  main.py
apps/Config/: config.py
apps/User/: dao.py  models.py  routers.py  shemas.py
apps/auth/: api.py  auth.py  depends_auth_google.py  jwt.py  password.py  services_auth.py  utils.py  validation.py
apps/dao/: base.py
apps/depends/: exception.py  exception_user_auth.py
apps/template/: auth_html.py
apps/tests/: conftest.py  mock_users.json
apps/tests/integtation_test/: test_auth_api.py
apps/tests/unit_test/user_test/: test_api.py  test_auth_depend_def.py
tests/: conftest_fixture.py
tests/integtation_test/: test_auth_api.py
