[tool.poetry]
name = "socialblog-user"
version = "0.1.0"
description = ""
authors = ["YASHALAWA8 <95289183+YASHALAWA8@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
