[tool.poetry]
name = "socialblog-user"
version = "0.1.0"
description = ""
authors = ["YASHALAWA8 <95289183+YASHALAWA8@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
itsdangerous = "^2.2.0"
authlib = "^1.3.2"
httpx = "^0.27.2"
pyjwt = "^2.9.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
